# ptam_plus

./: .gitignore  .hgignore  CMakeLists.txt  README.md
Emscripten/: output.js  output.wasm
apps/: CMakeLists.txt
apps/calibration/: CMakeLists.txt  calib_corner_patch.cc  calib_corner_patch.h  calib_image.cc  calib_image.h  camera_calibrator.cc  camera_calibrator.h  config.h
apps/slam/: CMakeLists.txt  config.h  slam.cc  slam_glut.cc  slam_system.cc  slam_system.h  slam_window_glut.h
apps/slamJS/: CMakeLists.txt  slam_systemJS.cc  slam_systemJS.h  slam_window_glut.h
cmake/: PTAMUtil.cmake  PTAM_UI_Dependencies.cmake
opencv-3.4.13/build-opencv/: CMakeDownloadLog.txt  CMakeVars.txt  opencv_data_config.hpp
opencv-3.4.13/build-opencv/configured/modules/core/misc/java/src/java/: core+Core.jcode
opencv-3.4.13/build-opencv/configured/modules/java/generator/src/java/org/opencv/osgi/: OpenCVNativeLoader.java
opencv-3.4.13/build-opencv/lib/: libopencv_calib3d.3.4.13.dylib  libopencv_calib3d.3.4.dylib  libopencv_core.3.4.dylib  libopencv_dnn.3.4.13.dylib  libopencv_dnn.3.4.dylib  libopencv_features2d.3.4.13.dylib  libopencv_features2d.3.4.dylib  libopencv_flann.3.4.13.dylib  libopencv_flann.3.4.dylib  libopencv_highgui.3.4.13.dylib  libopencv_highgui.3.4.dylib  libopencv_imgcodecs.3.4.13.dylib  libopencv_imgcodecs.3.4.dylib  libopencv_imgproc.3.4.dylib  libopencv_ml.3.4.13.dylib  libopencv_ml.3.4.dylib  libopencv_objdetect.3.4.13.dylib  libopencv_objdetect.3.4.dylib  libopencv_photo.3.4.13.dylib  libopencv_photo.3.4.dylib  libopencv_shape.3.4.13.dylib  libopencv_shape.3.4.dylib  libopencv_stitching.3.4.13.dylib  libopencv_stitching.3.4.dylib  libopencv_superres.3.4.13.dylib  libopencv_superres.3.4.dylib  libopencv_video.3.4.13.dylib  libopencv_video.3.4.dylib  libopencv_videoio.3.4.13.dylib  libopencv_videoio.3.4.dylib  libopencv_videostab.3.4.13.dylib  libopencv_videostab.3.4.dylib
opencv-3.4.13/build-opencv/modules/core/: arithm.avx2.cpp  arithm.simd_declarations.hpp  convert.simd_declarations.hpp  convert.vsx3.cpp  convert_scale.avx2.cpp  convert_scale.simd_declarations.hpp  count_non_zero.simd_declarations.hpp  count_non_zero.sse2.cpp  mathfuncs_core.avx.cpp  mathfuncs_core.simd_declarations.hpp  matmul.avx512_skx.cpp  matmul.simd_declarations.hpp  mean.avx2.cpp  mean.simd_declarations.hpp  merge.simd_declarations.hpp  merge.sse2.cpp  opencl_kernels_core.cpp  split.avx2.cpp  split.simd_declarations.hpp  stat.simd_declarations.hpp  stat.sse4_2.cpp  sum.avx2.cpp  sum.simd_declarations.hpp  version_string.inc
opencv-3.4.13/build-opencv/modules/core/test/: test_intrin128.fp16.cpp  test_intrin128.simd_declarations.hpp  test_intrin256.avx2.cpp  test_intrin256.simd_declarations.hpp  test_intrin512.avx512_skx.cpp  test_intrin512.simd_declarations.hpp
opencv-3.4.13/build-opencv/modules/dnn/layers/: layers_common.avx2.cpp  layers_common.simd_declarations.hpp
opencv-3.4.13/build-opencv/modules/features2d/: sift.avx2.cpp  sift.simd_declarations.hpp
opencv-3.4.13/build-opencv/modules/imgproc/: accum.avx2.cpp  accum.simd_declarations.hpp  bilateral_filter.simd_declarations.hpp  bilateral_filter.sse2.cpp  box_filter.avx2.cpp  box_filter.simd_declarations.hpp  color_hsv.avx2.cpp  color_hsv.simd_declarations.hpp  color_rgb.avx2.cpp  color_rgb.simd_declarations.hpp  color_yuv.simd_declarations.hpp  color_yuv.sse2.cpp  filter.avx2.cpp  filter.simd_declarations.hpp  median_blur.simd_declarations.hpp  median_blur.sse2.cpp  morph.simd_declarations.hpp  morph.sse4_1.cpp  smooth.simd_declarations.hpp  smooth.sse2.cpp  sumpixels.avx2.cpp  sumpixels.simd_declarations.hpp  undistort.avx2.cpp  undistort.simd_declarations.hpp
opencv-3.4.13/build-opencv/modules/java_bindings_generator/: gen_java.json
opencv-3.4.13/build-opencv/modules/js_bindings_generator/: headers.txt
opencv-3.4.13/build-opencv/modules/python_bindings_generator/: headers.txt  pyopencv_custom_headers.h  pyopencv_generated_funcs.h  pyopencv_generated_modules_content.h  pyopencv_generated_types.h  pyopencv_generated_types_content.h  pyopencv_signatures.json
opencv-3.4.13/build-opencv/opencv2/: cvconfig.h
opencv-3.4.13/build-opencv/python_loader/cv2/: config-2.7.py  config.py
opencv-3.4.13/build-opencv/tmp/: setup_vars.sh
opencv-3.4.13/build-opencv/unix-install/: opencv.pc
ptam/: CMakeLists.txt
ptam/construct/: bundle.cc  bundle.h  keyframe.h  lapack_grap.h  map.cc  map.h  map_maker.cc  map_maker.h  map_point.cc  map_point.h  shi_tomasi.cc  shi_tomasi.h  small_blurry_image.cc  small_blurry_image.h
ptam/math/: atan_camera.cc  atan_camera.h
ptam/test/: CMakeLists.txt  config.h  test_ui_ar_render.cc
ptam/track/: calib_image.cc  homography_init.cc  homography_init.h  level_helpers.h  m_estimator.h  mini_patch.cc  mini_patch.h  patch_finder.cc  patch_finder.h  relocaliser.cc  relocaliser.h  small_matrix_opts.h  tracker.cc  tracker.h  tracker_data.h
ptam/ui/: CMakeLists.txt  ar_driver.cc.dist  ar_driver.h.dist  ar_render.cc  ar_render.h  eye_game.cc  eye_game.h  gl_helpers.h  gl_window.cc  gl_window.h  gl_window2.h  gl_window2.h.dist  gl_window_menu.cc  gl_window_menu.h  map_viewer.cc  map_viewer.h  open_gl.h  opengl.h
ptam/util/: opencv.h
